--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="css/community.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/can.js"></script>
     <script src="views/home/home.js"></script>
     <script src="views/assistant/assistant.js"></script>
     <script src="views/login/forgetpassword.js"></script>
